# matharena

./: pyproject.toml  requirements.txt  setup.py
configs/models/cerebras/: gpt-oss-120b.yaml  llama-3.3-70b.yaml  llama-4-scout.yaml  llama3.1-8b.yaml  qwen-3-32b.yaml
configs/models/groq/: example.yaml
scripts/: download_benchmarks.py  run.py
scripts/curation/: upload_outputs.py
src/matharena/: api.py  runner.py
