[project]
name = "matharena"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Mislav Balunovic", email = "mislav.balunovic@gmail.com" }
]
requires-python = ">=3.10"
dynamic = ["dependencies"]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.uv.workspace]
members = ["website"]
